force-app/main/default/objects/public_Invoice__x/public_Invoice__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP_ERP</externalDataSource>
    <externalName>public$Invoice</externalName>
    <externalRepository>id</externalRepository>
    <label>Invoice</label>
    <pluralLabel>Invoices</pluralLabel>
</CustomObject>