force-app/main/default/objects/public_Invoice__x/fields/date_due__c.field-meta.xml
<CustomField>
    <fullName>date_due__c</fullName>
    <externalDeveloperName>date_due</externalDeveloperName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>