force-app/main/default/objects/public_Invoice__x/fields/dealerId__c.field-meta.xml
<CustomField>
    <fullName>dealerId__c</fullName>
    <externalDeveloperName>dealerId</externalDeveloperName>
    <label>Dealer</label>
    <length>255</length>
    <referenceTargetField>Account.External_ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>IndirectLookup</type>
</CustomField>