force-app/main/default/objects/public_Invoice__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id</description>
    <externalDeveloperName>id</externalDeveloperName>
    <label>Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>