force-app/main/default/objects/public_Invoice__x/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <description>MSRP</description>
    <externalDeveloperName>MSRP</externalDeveloperName>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>