force-app/main/default/objects/public_Invoice__x/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price</description>
    <externalDeveloperName>Price</externalDeveloperName>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>