force-app/main/default/objects/public_Invoice__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>