force-app/main/default/objects/public_Invoice__x/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>VIN</description>
    <externalDeveloperName>VIN</externalDeveloperName>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>