force-app/main/default/objects/public_Invoice__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>date_due__c</columns>
    <columns>Model__c</columns>
    <columns>MSRP__c</columns>
    <columns>Price__c</columns>
    <columns>Status__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>